<resources xmlns:ns1="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Github_Management</string>

    <string name="github_user">Users</string>

    <string name="many_stars">Feeds</string>

    <string name="github_me">Me</string>

    <string name="user_search">Searching here</string>

    <string name="star_boundary_repo">-</string>

    <string name="repository_name">REPOSITORY</string>

    <string name="follows_many">Follows :</string>

    <string name="powered_by_github">powered by Github</string>

    <string name="change_users">Change Users</string>

    <!--RepoINFO-->
    <string name="createRepo">Create Repo When</string>
    <string name="updateRepo">Update Repo When</string>
    <string name="repoForks">Forks</string>
    <string name="repoStargazers">Stargazers</string>
    <string name="repoWatcher">Watchers</string>
    <string name="repoIssues">Issues</string>
    <string name="readME">READ ME</string>
    <string name="repoEmptyIssues">Empty Issue</string>


    <!--DetailIssues-->
    <string name="repoIssuesMany">Issues #N</string>
    <string name="issuesCommentsMany">N comments</string>
    <string name="ownerComment">Owner Comments</string>


    <!--Stargazers-->
    <string name="repo_stargazers">Stargazers</string>
    <string name="stargazers_noting_user">Nothing User</string>

    <!--Forks-->
    <string name="repo_forks_appbar_titleName">Forks</string>
    <string name="forks_nothis_user">Nothing User</string>

    <!--Watchers-->
    <string name="repo_watcher_title">Watchers</string>
    <!--RepoCommit-->
    <string name="repoWhenCommit">When Commit</string>
    <string name="repoCommitterIssue">Commit Issue</string>

    <string name="repoIssueMessage">Message</string>

    <!--UserInfo-->
    <string name="bio">User_BIO</string>
    <string name="view_more">VIEW MORE....</string>
    <string name="userInformation">User Information</string>


    <!--UserInfo-->
    <string name="userInfo">Info</string>
    <string name="userStar">Star</string>
    <string name="userRepoSummary">UserRepoSummary</string>

    <!--DetailRepo-->
    <string name="repoAbout">About</string>
    <string name="repoFile">files</string>
    <string name="repoCommits">commits</string>
    <string name="repoactirivy">activity</string>
    <string name="emptyRepository">EmptyRepository ;(</string>
    <string name="userEmptyInfo">EmptyUserInformation ;(</string>

    <!--tablayout-->
    <string name="overview">OVERVIEW</string>
    <string name="repository">REPOSITORY</string>
    <string name="followers">FOLLOWERS</string>
    <string name="following">FOLLOWING</string>
    <string name="users">USERS</string>


    <!--RepoInfo-->
    <string name="fork">Forked</string>
    <string name="language">Language</string>
    <string name="notResult">Nothing Result</string>


    <!--User OverView-->
    <string name="email">E-MAIL</string>
    <string name="description">Description</string>
    <string name="followingsN">N</string>
    <string name="followerN">N</string>
    <string name="location">Location</string>


    <!--MyFragment-->
    <string name="whatsName">What`s ur Name?</string>
    <string name="alertDialogTitle">Input Ur Name</string>
    <string name="user_input_name">유저 이름을 입력하세요</string>
    <string name="dialog_ok">확인</string>
    <string name="dialog_cancel">취소</string>
    <string name="joinDate">가입날짜</string>


    <!--BottomNavigationLayout-->
    <string name="bbn_fab_default_behavior" translatable="false">
        tech.tsdev.github_management.util.BottomNavigationBehavior
    </string>


    <!--toolbar Title-->
    <string name="toolbar_title_Followers">Followers</string>
    <string name="toolbar_title_Following">Following</string>

    <string name="start">
        Start by name
    </string>

    <string name="user_star_repo">UserGiveStar</string>

    <string name="require">Required</string>

    <!--MainInputActivity-->
    <string name="inputName">Powered by Github/Design by OpenHub</string>
    <string name="copyRight">©CopyRight 2019 TS</string>

    <!--BottomNavigation-->
    <string name="bbn_phone_view_behavior" ns1:ignore="UnusedResources" translatable="false">
        it.sephiroth.android.library.bottomnavigation.BottomBehavior
    </string>

    <string name="query_is_nothing">Nothing Result</string>
</resources>
