<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/user_info"
          android:icon="@drawable/vd_user_outline"
          android:title="@string/users"
          app:showAsAction="always"/>

    <item
        android:id="@+id/user_repository"
        android:title="@string/repository_name"
        app:showAsAction="always"
        android:icon="@drawable/ic_import_contacts_white_24dp"/>

    <item
        android:id="@+id/user_detail_followers"
        android:title="@string/followers"
        android:icon="@drawable/ic_people_outline_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/user_detail_following"
        android:title="@string/following"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        app:showAsAction="always"/>
</menu>