<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <tech.tsdev.github_management.view.main.custom.GlideImageView
            android:id="@+id/detail_user_img"
            android:layout_width="111dp"
            android:layout_height="96dp"
            android:src="@drawable/sample_02"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_user_login_name"
            android:textSize="24sp" android:textColor="@color/black"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/detail_user_img"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.411"/>
    <TextView
            android:text="@string/github_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_user_name" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/detail_user_img" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/detail_user_login_name"
            app:layout_constraintHorizontal_bias="0.422"/>
    <Button
            android:text="@string/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_user_followers" app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" android:textSize="16sp"
            android:layout_marginTop="68dp" app:layout_constraintTop_toBottomOf="@+id/detail_user_name"
            android:layout_marginStart="36dp"/>
    <Button
            android:text="@string/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_user_following"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="68dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/detail_user_name" android:layout_marginEnd="36dp"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="80dp"
                  android:orientation="horizontal"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:id="@+id/linearLayout" android:layout_marginTop="116dp"
                  app:layout_constraintTop_toBottomOf="@+id/detail_user_description"
                  android:background="@drawable/bg_topline_black">
        <tech.tsdev.github_management.view.main.custom.GlideImageView
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp" android:src="@drawable/ic_email_black_24dp"
                android:id="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/detail_user_followers"/>
        <TextView
                android:layout_gravity="center"
                android:text="@string/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="start|center"
                android:id="@+id/detail_user_email"
                android:layout_marginStart="16dp"
                android:autoLink="email"/>
    </LinearLayout>

    <TextView
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detail_user_description" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/detail_user_name"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/followerN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_user_followersN"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_user_followers" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="92dp" app:layout_constraintVertical_bias="0.571"/>
    <TextView
            android:text="@string/followingsN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_user_followingN" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="92dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/detail_user_following"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.571"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="80dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginTop="8dp"
                  app:layout_constraintTop_toBottomOf="@+id/linearLayout">
        <tech.tsdev.github_management.view.main.custom.GlideImageView android:layout_width="40dp"
                                                                      android:layout_height="40dp"
                                                                      android:layout_gravity="center"
                                                                      android:src="@drawable/ic_location_on_black_24dp"
                                                                      android:layout_marginStart="16dp"/>

        <TextView android:layout_width="match_parent" android:layout_height="40dp"
                  android:layout_gravity="center" android:text="@string/location"
                  android:gravity="start|center"
                  android:layout_marginStart="16dp" android:autoLink="map"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>