<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical">
        <android.support.design.card.MaterialCardView android:layout_width="match_parent"
                                                      android:layout_height="wrap_content"
                                                      android:translationZ="@dimen/material_card_view_margin"
                                                      android:background="@drawable/card_view_shadow"
                                                      android:elevation="@dimen/material_card_view_margin">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/owner_repo_name"
                          tools:text="@string/repository" android:padding="@dimen/spacing_large"
                          android:textSize="@dimen/text_large"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/owner_repo_create_At"
                          tools:text="@string/createRepo" android:paddingStart="@dimen/spacing_large"
                          android:paddingEnd="@dimen/spacing_large"/>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:padding="@dimen/spacing_large" android:baselineAligned="false">
                    <LinearLayout android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_weight="3"
                                  android:id="@+id/owner_repo_issue_layout"
                                  android:gravity="center"
                                  android:background="?attr/selectableItemBackgroundBorderless"
                                  android:orientation="vertical">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:id="@+id/owner_repo_issue"
                                  tools:text="@string/followerN"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:text="@string/repoIssues"/>
                    </LinearLayout>
                    <LinearLayout android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_weight="3"
                                  android:background="?attr/selectableItemBackgroundBorderless"
                                  android:gravity="center"
                                  android:id="@+id/owner_repo_stargazer_layout"
                                  android:orientation="vertical">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:id="@+id/owner_repo_stargazer"
                                  tools:text="@string/followerN"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:text="@string/repoStargazers"/>
                    </LinearLayout>
                    <LinearLayout android:layout_width="wrap_content"
                                  android:layout_weight="3"
                                  android:gravity="center"
                                  android:background="?attr/selectableItemBackgroundBorderless"
                                  android:layout_height="wrap_content"
                                  android:orientation="vertical">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:id="@+id/owner_repo_forked"
                                  tools:text="@string/followerN"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:text="@string/repoForks"/>
                    </LinearLayout>
                    <LinearLayout android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_weight="3"
                                  android:background="?attr/selectableItemBackgroundBorderless"
                                  android:gravity="center"
                                  android:orientation="vertical">
                        <TextView android:layout_width="wrap_content"
                                  android:id="@+id/owner_repo_watcher" android:layout_height="wrap_content"
                                  tools:text="@string/followerN"/>
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                  android:text="@string/repoWatcher"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.design.card.MaterialCardView>

        <android.support.design.card.MaterialCardView android:layout_width="match_parent"
                                                      android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                          android:orientation="vertical">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text="@string/readME" android:padding="@dimen/spacing_large"
                android:textSize="@dimen/text_large"/>

                <WebView android:layout_width="match_parent" android:layout_height="match_parent"
                         android:id="@+id/owner_repo_readme"/>

            </LinearLayout>
        </android.support.design.card.MaterialCardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>