<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:layout_width="match_parent"
                                            app:layout_behavior="@string/bottom_sheet_behavior"
                                            android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical">
        <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:id="@+id/user_lottie_view"
                app:lottie_autoPlay="true" android:layout_gravity="center"
                app:lottie_fileName="loading_animation.json"
                app:lottie_loop="true"/>
        <com.google.android.material.card.MaterialCardView
                android:id="@+id/user_info_card_view"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/material_card_view_margin"
                android:translationZ="@dimen/material_card_view_margin"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_small"
                android:background="@drawable/card_view_shadow">

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          tools:text="@string/users" android:id="@+id/user_id"
                          android:textSize="@dimen/text_large" android:textColor="@color/colorPrimary"
                          android:lines="1"
                          android:padding="@dimen/spacing_small"/>

                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          tools:text="@string/bio" android:id="@+id/user_bio"
                          android:padding="@dimen/spacing_small"/>

                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          tools:text="@string/email" android:padding="@dimen/spacing_small"
                          android:id="@+id/user_email"
                          android:drawableStart="@drawable/ic_email_black_24dp"
                          android:autoLink="email"
                          android:drawablePadding="@dimen/spacing_normal"/>

                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          tools:text="@string/email" android:padding="@dimen/spacing_small"
                          android:drawableStart="@drawable/ic_cloud_queue_black_24dp"
                          android:drawablePadding="@dimen/spacing_normal" android:id="@+id/user_web"
                          android:autoLink="web"/>

                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          tools:text="@string/following" android:padding="@dimen/spacing_small"
                          android:drawableStart="@drawable/ic_group_black_24dp"
                          android:drawablePadding="@dimen/spacing_normal" android:id="@+id/user_followings"
                          android:background="?attr/selectableItemBackground"
                          android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"/>

                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          tools:text="@string/followers" android:padding="@dimen/spacing_small"
                          android:drawableStart="@drawable/ic_group_black_24dp"
                          android:drawablePadding="@dimen/spacing_normal"
                          android:background="?attr/selectableItemBackground" android:id="@+id/user_followers"
                          android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"/>

                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          tools:text="@string/repository" android:padding="@dimen/spacing_small"
                          android:drawableStart="@drawable/ic_library_repos_black_24dp"
                          android:drawablePadding="@dimen/spacing_normal" android:id="@+id/user_repos"
                          android:background="?attr/selectableItemBackground"
                          android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>