<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:orientation="vertical">

    <RelativeLayout xmlns:fbutton="http://schemas.android.com/apk/res-auto" android:layout_width="350dp"
                    android:layout_height="200dp" android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bd_custom_dialog">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/tv_userName" android:text="@string/whatsName"
                  android:layout_marginStart="15dp" android:layout_marginTop="15dp"/>

        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       android:layout_below="@+id/tv_userName"
                                                       android:layout_centerHorizontal="true"
                                                       android:layout_marginTop="10dp"
                                                       android:layout_marginStart="20dp">
            <com.google.android.material.textfield.TextInputEditText android:layout_width="300dp"
                                                             android:layout_height="wrap_content"
                                                             android:hint="@string/user_input_name"
                                                             android:textDirection="locale"
                                                             android:inputType="text"
                                                             android:id="@+id/et_input_user_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <info.hoang8f.widget.FButton
                fbutton:buttonColor="@color/fbutton_color_midnight_blue"
                android:id="@+id/btn_cancel" android:layout_width="80dp"
                android:layout_height="wrap_content" android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp" android:text="@string/dialog_cancel"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                android:textColor="@color/fbutton_color_pomegranate"/>

        <info.hoang8f.widget.FButton
                fbutton:buttonColor="@color/fbutton_color_midnight_blue"
                android:id="@+id/btn-submit" android:layout_width="80dp"
                android:layout_height="wrap_content" android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/btn_cancel"
                android:text="@string/dialog_ok"
                android:textColor="@color/fbutton_color_nephritis"/>

    </RelativeLayout>
</RelativeLayout>